// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProposalsList /> <TestProposalsList /> should render correctly with images 1`] = `
Array [
  <div
    className="sc-bcXGCL cgAMhb toasts-container toasts-container--top"
  />,
  <div
    className="sc-bcXGCL gdzZUX"
    id="proposals-list"
  >
    <ul>
      <div
        data-testid="AnimatePresence"
      >
        <li
          className="motion-map"
          style={
            Object {
              "height": "auto",
              "marginBottom": "1.7rem",
              "opacity": 1,
            }
          }
        >
          <div
            className="sc-bcXGCL beYXxz"
            id="proposal-<Proposal-mock-id-2>"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            <div
              className="sc-bcXGCL bVGmWY"
            >
              <div
                className="sc-bcXGCL eaOiYD"
              >
                <div
                  className="sc-bcXGCL gcrvYg"
                >
                  <div
                    className="sc-bcXGCL eJjsxH"
                  >
                    <svg
                      aria-hidden="true"
                      className="sc-bcXGCL sc-eJDTud jQjKpa knzWyK cap-icon"
                      fill="none"
                      height="1em"
                      viewBox="0 0 13 14"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        clipRule="evenodd"
                        d="M3.75 3.261a2.75 2.75 0 1 0 5.5 0 2.75 2.75 0 0 0-5.5 0"
                        stroke="currentColor"
                        strokeLinecap="round"
                        strokeLinejoin="round"
                      />
                      <path
                        d="M1 12.611a5.5 5.5 0 0 1 11 0"
                        stroke="currentColor"
                        strokeLinecap="round"
                        strokeLinejoin="round"
                      />
                    </svg>
                    <p
                      className="sc-bcXGCL foSpZD cap-text"
                    >
                      &lt;mock-value-for-field-"displayName"&gt;
                    </p>
                  </div>
                </div>
                <a
                  className="voteStep-link"
                  href="/project///<mock-value-for-field-\\"slug\\">"
                  onClick={[Function]}
                >
                  <h4
                    className="sc-bcXGCL dcpbiJ cap-heading"
                  >
                    &lt;mock-value-for-field-"title"&gt;
                  </h4>
                </a>
              </div>
              <p
                className="sc-bcXGCL eKXGuF"
              />
              <div
                className="sc-bcXGCL eKhpxm"
              >
                <div
                  className="sc-bcXGCL kNrudi"
                >
                  <div
                    className="sc-bcXGCL fcCuvN"
                  >
                    <div
                      className="sc-bcXGCL gtMDQe"
                    >
                      <div
                        className="sc-bcXGCL eFHuff"
                      >
                        <svg
                          aria-hidden="true"
                          className="sc-bcXGCL sc-eJDTud fztzb cpMilg cap-icon"
                          fill="none"
                          height="1em"
                          viewBox="0 0 24 24"
                          width="1em"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M19.439 6.75c0 4.56-3.355 8.25-7.5 8.25s-7.5-3.69-7.5-8.25A8.7 8.7 0 0 1 6.157 1.5H17.72a8.7 8.7 0 0 1 1.718 5.25"
                            stroke="currentColor"
                            strokeLinecap="round"
                            strokeLinejoin="round"
                            strokeWidth={1.3}
                          />
                          <path
                            d="M18.621 3h2.317a1.5 1.5 0 0 1 1.5 1.5v2.581c0 2.86-1.269 5.323-4.073 5.884l-1.922.384M5.255 3H2.938a1.5 1.5 0 0 0-1.5 1.5v2.581c0 2.86 1.27 5.323 4.073 5.884l1.922.384M8.188 22.5h7.5M8.188 22.5a3.75 3.75 0 0 1 7.5 0M11.939 15v3.75"
                            stroke="currentColor"
                            strokeLinecap="round"
                            strokeLinejoin="round"
                            strokeWidth={1.3}
                          />
                        </svg>
                        <div
                          className="sc-bcXGCL cfNBnR"
                        >
                          <span>
                            &lt;mock-value-for-field-"totalPointsCount"&gt;&lt;mock-value-for-field-"paperVotesTotalPointsCount"&gt;
                          </span>
                          <span
                            className="sc-bcXGCL iseJzR"
                          >
                            pts
                          </span>
                        </div>
                      </div>
                      <div
                        className="sc-bcXGCL eFHuff"
                      >
                        <svg
                          aria-hidden="true"
                          className="sc-bcXGCL sc-eJDTud fztzb cpMilg cap-icon"
                          fill="none"
                          height="1em"
                          viewBox="0 0 24 24"
                          width="1em"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M6.872 6.933c3.277 0 5.933-1.328 5.933-2.966S10.15 1 6.872 1 .938 2.328.938 3.967c0 1.638 2.657 2.966 5.934 2.966M12.806 7.922V3.967"
                            stroke="currentColor"
                            strokeLinecap="round"
                            strokeLinejoin="round"
                            strokeWidth={1.3}
                          />
                          <path
                            d="M.938 3.967V18.8c0 1.642 2.66 2.967 5.934 2.967q.84.003 1.671-.119"
                            stroke="currentColor"
                            strokeLinecap="round"
                            strokeLinejoin="round"
                            strokeWidth={1.3}
                          />
                          <path
                            d="M.938 15.092c0 1.641 2.66 2.966 5.934 2.966a12 12 0 0 0 1.71-.128M.938 11.383c0 1.641 2.66 2.967 5.934 2.967q.84.003 1.671-.12M.938 7.675c0 1.641 2.66 2.967 5.934 2.967a12 12 0 0 0 1.71-.13M17.258 16.08c3.277 0 5.933-1.328 5.933-2.967 0-1.638-2.656-2.966-5.933-2.966s-5.934 1.328-5.934 2.966 2.657 2.967 5.934 2.967"
                            stroke="currentColor"
                            strokeLinecap="round"
                            strokeLinejoin="round"
                            strokeWidth={1.3}
                          />
                          <path
                            d="M11.324 13.113v7.17c0 1.641 2.66 2.967 5.934 2.967s5.933-1.326 5.933-2.967v-7.17"
                            stroke="currentColor"
                            strokeLinecap="round"
                            strokeLinejoin="round"
                            strokeWidth={1.3}
                          />
                          <path
                            d="M23.191 16.574c0 1.642-2.66 2.967-5.933 2.967-3.274 0-5.934-1.325-5.934-2.967"
                            stroke="currentColor"
                            strokeLinecap="round"
                            strokeLinejoin="round"
                            strokeWidth={1.3}
                          />
                        </svg>
                        <div
                          className="sc-bcXGCL haZcTN"
                        >
                          &lt;mock-value-for-field-"estimation"&gt;€
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    className="sc-bcXGCL eFHuff"
                  >
                    <svg
                      aria-hidden="true"
                      className="sc-bcXGCL sc-eJDTud fztzb cpMilg cap-icon"
                      fill="none"
                      height="1em"
                      viewBox="0 0 14 13"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M7 .511c-3.314 0-6 2.22-6 4.957a4.56 4.56 0 0 0 1.774 3.517L1.522 11.99l3.324-1.9A7.1 7.1 0 0 0 7 10.424c3.314 0 6-2.219 6-4.956S10.314.51 7 .51"
                        stroke="currentColor"
                        strokeLinecap="round"
                        strokeLinejoin="round"
                      />
                    </svg>
                    <div
                      className="sc-bcXGCL haZcTN"
                    >
                      &lt;mock-value-for-field-"totalCount"&gt;
                    </div>
                  </div>
                  <div
                    className="sc-bcXGCL eFHuff"
                  >
                    <svg
                      aria-hidden="true"
                      className="sc-bcXGCL sc-eJDTud bIUvGA cpMilg cap-icon"
                      fill="none"
                      height="1em"
                      viewBox="0 0 32 29"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M31.067 4.945a9 9 0 0 0-2.637-3.199A8.6 8.6 0 0 0 24.683.123a8.5 8.5 0 0 0-4.051.301 8.7 8.7 0 0 0-3.485 2.16l-1.146 1.077-1.107-1.049A8.66 8.66 0 0 0 11.391.42 8.4 8.4 0 0 0 7.308.127a8.44 8.44 0 0 0-3.752 1.608 8.8 8.8 0 0 0-2.622 3.21 9.1 9.1 0 0 0-.824 5.423 8.9 8.9 0 0 0 2.438 4.875L15.04 28.578c.124.133.273.24.438.312a1.29 1.29 0 0 0 1.482-.312L29.44 15.27a8.94 8.94 0 0 0 2.448-4.886 9.1 9.1 0 0 0-.822-5.44"
                        fill="currentColor"
                      />
                    </svg>
                    <div
                      className="sc-bcXGCL haZcTN"
                    >
                      1
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div>
              <div
                className="sc-bcXGCL iiMaTZ"
              >
                <div
                  className="sc-bcXGCL drdikR"
                >
                  <div
                    aria-label="Tag <mock-value-for-field-\\"name\\">"
                    className="sc-bcXGCL UwUoA cap-tag"
                    onBlur={[Function]}
                    onFocus={[Function]}
                    tabIndex={-1}
                    title="<mock-value-for-field-\\"name\\">"
                  >
                    &lt;mock-value-for-field-"name"&gt;
                  </div>
                  <img
                    alt="<mock-value-for-field-\\"name\\">"
                    className="sc-bcXGCL ejWmjX"
                    src="<mock-value-for-field-\\"url\\">"
                    style={
                      Object {
                        "aspectRatio": "3 / 2",
                        "objectFit": "cover",
                        "overflow": "hidden",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
        </li>
      </div>
    </ul>
  </div>,
]
`;

exports[`<ProposalsList /> <TestProposalsList /> should render correctly without images 1`] = `
Array [
  <div
    className="sc-bcXGCL cgAMhb toasts-container toasts-container--top"
  />,
  <div
    className="sc-bcXGCL gdzZUX"
    id="proposals-list"
  >
    <ul>
      <div
        data-testid="AnimatePresence"
      >
        <li
          className="motion-map"
          style={
            Object {
              "height": "auto",
              "marginBottom": "1.7rem",
              "opacity": 1,
            }
          }
        >
          <div
            className="sc-bcXGCL hZkHWP"
            id="proposal-<Proposal-mock-id-2>"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            <div
              className="sc-bcXGCL bVGmWY"
            >
              <div
                className="sc-bcXGCL eaOiYD"
              >
                <div
                  className="sc-bcXGCL gcrvYg"
                >
                  <div
                    className="sc-bcXGCL eJjsxH"
                  >
                    <svg
                      aria-hidden="true"
                      className="sc-bcXGCL sc-eJDTud jQjKpa knzWyK cap-icon"
                      fill="none"
                      height="1em"
                      viewBox="0 0 13 14"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        clipRule="evenodd"
                        d="M3.75 3.261a2.75 2.75 0 1 0 5.5 0 2.75 2.75 0 0 0-5.5 0"
                        stroke="currentColor"
                        strokeLinecap="round"
                        strokeLinejoin="round"
                      />
                      <path
                        d="M1 12.611a5.5 5.5 0 0 1 11 0"
                        stroke="currentColor"
                        strokeLinecap="round"
                        strokeLinejoin="round"
                      />
                    </svg>
                    <p
                      className="sc-bcXGCL foSpZD cap-text"
                    >
                      &lt;mock-value-for-field-"displayName"&gt;
                    </p>
                  </div>
                </div>
                <a
                  className="voteStep-link"
                  href="/project///<mock-value-for-field-\\"slug\\">"
                  onClick={[Function]}
                >
                  <h4
                    className="sc-bcXGCL dcpbiJ cap-heading"
                  >
                    &lt;mock-value-for-field-"title"&gt;
                  </h4>
                </a>
              </div>
              <p
                className="sc-bcXGCL eKXGuF"
              />
              <div
                className="sc-bcXGCL eKhpxm"
              >
                <div
                  className="sc-bcXGCL kNrudi"
                >
                  <div
                    className="sc-bcXGCL fcCuvN"
                  >
                    <div
                      className="sc-bcXGCL gtMDQe"
                    >
                      <div
                        className="sc-bcXGCL eFHuff"
                      >
                        <svg
                          aria-hidden="true"
                          className="sc-bcXGCL sc-eJDTud fztzb cpMilg cap-icon"
                          fill="none"
                          height="1em"
                          viewBox="0 0 24 24"
                          width="1em"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M19.439 6.75c0 4.56-3.355 8.25-7.5 8.25s-7.5-3.69-7.5-8.25A8.7 8.7 0 0 1 6.157 1.5H17.72a8.7 8.7 0 0 1 1.718 5.25"
                            stroke="currentColor"
                            strokeLinecap="round"
                            strokeLinejoin="round"
                            strokeWidth={1.3}
                          />
                          <path
                            d="M18.621 3h2.317a1.5 1.5 0 0 1 1.5 1.5v2.581c0 2.86-1.269 5.323-4.073 5.884l-1.922.384M5.255 3H2.938a1.5 1.5 0 0 0-1.5 1.5v2.581c0 2.86 1.27 5.323 4.073 5.884l1.922.384M8.188 22.5h7.5M8.188 22.5a3.75 3.75 0 0 1 7.5 0M11.939 15v3.75"
                            stroke="currentColor"
                            strokeLinecap="round"
                            strokeLinejoin="round"
                            strokeWidth={1.3}
                          />
                        </svg>
                        <div
                          className="sc-bcXGCL cfNBnR"
                        >
                          <span>
                            &lt;mock-value-for-field-"totalPointsCount"&gt;&lt;mock-value-for-field-"paperVotesTotalPointsCount"&gt;
                          </span>
                          <span
                            className="sc-bcXGCL iseJzR"
                          >
                            pts
                          </span>
                        </div>
                      </div>
                      <div
                        className="sc-bcXGCL eFHuff"
                      >
                        <svg
                          aria-hidden="true"
                          className="sc-bcXGCL sc-eJDTud fztzb cpMilg cap-icon"
                          fill="none"
                          height="1em"
                          viewBox="0 0 24 24"
                          width="1em"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M6.872 6.933c3.277 0 5.933-1.328 5.933-2.966S10.15 1 6.872 1 .938 2.328.938 3.967c0 1.638 2.657 2.966 5.934 2.966M12.806 7.922V3.967"
                            stroke="currentColor"
                            strokeLinecap="round"
                            strokeLinejoin="round"
                            strokeWidth={1.3}
                          />
                          <path
                            d="M.938 3.967V18.8c0 1.642 2.66 2.967 5.934 2.967q.84.003 1.671-.119"
                            stroke="currentColor"
                            strokeLinecap="round"
                            strokeLinejoin="round"
                            strokeWidth={1.3}
                          />
                          <path
                            d="M.938 15.092c0 1.641 2.66 2.966 5.934 2.966a12 12 0 0 0 1.71-.128M.938 11.383c0 1.641 2.66 2.967 5.934 2.967q.84.003 1.671-.12M.938 7.675c0 1.641 2.66 2.967 5.934 2.967a12 12 0 0 0 1.71-.13M17.258 16.08c3.277 0 5.933-1.328 5.933-2.967 0-1.638-2.656-2.966-5.933-2.966s-5.934 1.328-5.934 2.966 2.657 2.967 5.934 2.967"
                            stroke="currentColor"
                            strokeLinecap="round"
                            strokeLinejoin="round"
                            strokeWidth={1.3}
                          />
                          <path
                            d="M11.324 13.113v7.17c0 1.641 2.66 2.967 5.934 2.967s5.933-1.326 5.933-2.967v-7.17"
                            stroke="currentColor"
                            strokeLinecap="round"
                            strokeLinejoin="round"
                            strokeWidth={1.3}
                          />
                          <path
                            d="M23.191 16.574c0 1.642-2.66 2.967-5.933 2.967-3.274 0-5.934-1.325-5.934-2.967"
                            stroke="currentColor"
                            strokeLinecap="round"
                            strokeLinejoin="round"
                            strokeWidth={1.3}
                          />
                        </svg>
                        <div
                          className="sc-bcXGCL haZcTN"
                        >
                          &lt;mock-value-for-field-"estimation"&gt;€
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    className="sc-bcXGCL eFHuff"
                  >
                    <svg
                      aria-hidden="true"
                      className="sc-bcXGCL sc-eJDTud fztzb cpMilg cap-icon"
                      fill="none"
                      height="1em"
                      viewBox="0 0 14 13"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M7 .511c-3.314 0-6 2.22-6 4.957a4.56 4.56 0 0 0 1.774 3.517L1.522 11.99l3.324-1.9A7.1 7.1 0 0 0 7 10.424c3.314 0 6-2.219 6-4.956S10.314.51 7 .51"
                        stroke="currentColor"
                        strokeLinecap="round"
                        strokeLinejoin="round"
                      />
                    </svg>
                    <div
                      className="sc-bcXGCL haZcTN"
                    >
                      &lt;mock-value-for-field-"totalCount"&gt;
                    </div>
                  </div>
                  <div
                    className="sc-bcXGCL eFHuff"
                  >
                    <svg
                      aria-hidden="true"
                      className="sc-bcXGCL sc-eJDTud bIUvGA cpMilg cap-icon"
                      fill="none"
                      height="1em"
                      viewBox="0 0 32 29"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M31.067 4.945a9 9 0 0 0-2.637-3.199A8.6 8.6 0 0 0 24.683.123a8.5 8.5 0 0 0-4.051.301 8.7 8.7 0 0 0-3.485 2.16l-1.146 1.077-1.107-1.049A8.66 8.66 0 0 0 11.391.42 8.4 8.4 0 0 0 7.308.127a8.44 8.44 0 0 0-3.752 1.608 8.8 8.8 0 0 0-2.622 3.21 9.1 9.1 0 0 0-.824 5.423 8.9 8.9 0 0 0 2.438 4.875L15.04 28.578c.124.133.273.24.438.312a1.29 1.29 0 0 0 1.482-.312L29.44 15.27a8.94 8.94 0 0 0 2.448-4.886 9.1 9.1 0 0 0-.822-5.44"
                        fill="currentColor"
                      />
                    </svg>
                    <div
                      className="sc-bcXGCL haZcTN"
                    >
                      1
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </li>
      </div>
    </ul>
  </div>,
]
`;
